Update image and favicon

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,7 @@
 <nav class="pt-navbar header">
   <div class="header__wrapper">
     <div class="pt-navbar-group pt-align-left">
-      <img src="assets/images/apio-logo.jpg" class="header__logo" />
+      <img src="assets/images/apio-logo.png" class="header__logo" />
       <div class="pt-navbar-heading header__title">
         Asia-Pacific Informatics Olympiad 2020
       </div>
