Add call for tasks page

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -12,42 +12,10 @@
       <div
         class="pt-tab"
         role="tab"
-        aria-selected="{% if page.key == 'rules' %}true{% else %}false{% endif %}"
+        aria-selected="{% if page.key == 'call-for-tasks' %}true{% else %}false{% endif %}"
       >
         <span class="pt-icon-standard pt-icon-book sidebar-icon"></span>
-        <a href="/rules.html">Rules</a>
-      </div>
-      <div
-        class="pt-tab"
-        role="tab"
-        aria-selected="{% if page.key == 'environment' %}true{% else %}false{% endif %}"
-      >
-        <span class="pt-icon-standard pt-icon-application sidebar-icon"></span>
-        <a href="/environment.html">Environment</a>
-      </div>
-      <div
-        class="pt-tab"
-        role="tab"
-        aria-selected="{% if page.key == 'contestants' %}true{% else %}false{% endif %}"
-      >
-        <span class="pt-icon-standard pt-icon-people sidebar-icon"></span>
-        <a href="/contestants.html">Contestants</a>
-      </div>
-      <div
-        class="pt-tab"
-        role="tab"
-        aria-selected="{% if page.key == 'schedule' %}true{% else %}false{% endif %}"
-      >
-        <span class="pt-icon-standard pt-icon-calendar sidebar-icon"></span>
-        <a href="/schedule.html">Schedule</a>
-      </div>
-      <div
-        class="pt-tab"
-        role="tab"
-        aria-selected="{% if page.key == 'contact' %}true{% else %}false{% endif %}"
-      >
-        <span class="pt-icon-standard pt-icon-envelope sidebar-icon"></span>
-        <a href="/contact.html">Contact us</a>
+        <a href="/call-for-tasks">Call for Tasks</a>
       </div>
     </div>
   </div>
