Revert "add some info"
This reverts commit 27797d9eca3ceb6682a478ad70e172bc813d79a2.

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -11,7 +11,6 @@
 @import 'sidebar';
 @import 'content-card';
 @import 'card';
-@import 'status';
 
 body {
   color: $text-color !important;
@@ -20,12 +19,11 @@ body {
 }
 
 p {
-  line-height: 1.5;
-  margin-bottom: 1.5em;
+  line-height: 20px;
 
   small {
     color: $small-color !important;
-    line-height: 1.5 !important;
+    line-height: 14px !important;
   }
 }
 
@@ -116,16 +114,6 @@ select {
 
 table {
   width: 100%;
-  margin-bottom: 1rem;
-  th, td {
-    padding: 1rem;
-  }
-  tr {
-    border-bottom: 1px solid #00000010;
-  }
-  thead {
-    border-bottom: 4px solid #00000020;
-  }
 }
 
 .html-text {
