--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -20,12 +20,11 @@ body {
 }
 
 p {
-  line-height: 1.5;
-  margin-bottom: 1.5em;
+  line-height: 20px;
 
   small {
     color: $small-color !important;
-    line-height: 1.5 !important;
+    line-height: 14px !important;
   }
 }
 
