--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -20,6 +20,14 @@
       <div
         class="pt-tab"
         role="tab"
+        aria-selected="{% if page.key == 'onsite' %}true{% else %}false{% endif %}"
+      >
+        <span class="pt-icon-standard pt-icon-flag sidebar-icon"></span>
+        <a href="/onsite.html">Onsite Competition</a>
+      </div>
+      <div
+        class="pt-tab"
+        role="tab"
         aria-selected="{% if page.key == 'rules' %}true{% else %}false{% endif %}"
       >
         <span class="pt-icon-standard pt-icon-book sidebar-icon"></span>
@@ -36,10 +44,10 @@
       <div
         class="pt-tab"
         role="tab"
-        aria-selected="{% if page.key == 'contestants' %}true{% else %}false{% endif %}"
+        aria-selected="{% if page.key == 'registration' %}true{% else %}false{% endif %}"
       >
         <span class="pt-icon-standard pt-icon-people sidebar-icon"></span>
-        <a href="/contestants.html">Contestants</a>
+        <a href="/registration.html">Registration</a>
       </div>
       <div
         class="pt-tab"
