🔥 🔥 🔥 Add About, Rules, Schedule, Onsite Contest, and many things! (#4)
* add some info

* fix typo

* add onsite page

* add more links

* fix typo ❤️

* resolve irvin's comment :3

* salah link...

* resolving irvin's comment :3

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -12,10 +12,58 @@
       <div
         class="pt-tab"
         role="tab"
+        aria-selected="{% if page.key == 'about' %}true{% else %}false{% endif %}"
+      >
+        <span class="pt-icon-standard pt-icon-star sidebar-icon"></span>
+        <a href="/about.html">About</a>
+      </div>
+      <div
+        class="pt-tab"
+        role="tab"
         aria-selected="{% if page.key == 'call-for-tasks' %}true{% else %}false{% endif %}"
       >
         <span class="pt-icon-standard pt-icon-book sidebar-icon"></span>
-        <a href="/call-for-tasks">Call for Tasks</a>
+        <a href="/call-for-tasks.html">Call for Tasks</a>
+      </div>
+      <div
+        class="pt-tab"
+        role="tab"
+        aria-selected="{% if page.key == 'onsite' %}true{% else %}false{% endif %}"
+      >
+        <span class="pt-icon-standard pt-icon-flag sidebar-icon"></span>
+        <a href="/onsite.html">Onsite Competition</a>
+      </div>
+      <div
+        class="pt-tab"
+        role="tab"
+        aria-selected="{% if page.key == 'rules' %}true{% else %}false{% endif %}"
+      >
+        <span class="pt-icon-standard pt-icon-book sidebar-icon"></span>
+        <a href="/rules.html">Rules</a>
+      </div>
+      <div
+        class="pt-tab"
+        role="tab"
+        aria-selected="{% if page.key == 'registration' %}true{% else %}false{% endif %}"
+      >
+        <span class="pt-icon-standard pt-icon-people sidebar-icon"></span>
+        <a href="/registration.html">Registration</a>
+      </div>
+      <div
+        class="pt-tab"
+        role="tab"
+        aria-selected="{% if page.key == 'schedule' %}true{% else %}false{% endif %}"
+      >
+        <span class="pt-icon-standard pt-icon-calendar sidebar-icon"></span>
+        <a href="/schedule.html">Schedule</a>
+      </div>
+      <div
+        class="pt-tab"
+        role="tab"
+        aria-selected="{% if page.key == 'contact' %}true{% else %}false{% endif %}"
+      >
+        <span class="pt-icon-standard pt-icon-envelope sidebar-icon"></span>
+        <a href="/contact.html">Contact us</a>
       </div>
     </div>
   </div>
