--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -11,6 +11,7 @@
 @import 'sidebar';
 @import 'content-card';
 @import 'card';
+@import 'status';
 
 body {
   color: $text-color !important;
@@ -114,6 +115,16 @@ select {
 
 table {
   width: 100%;
+  margin-bottom: 1rem;
+  th, td {
+    padding: 1rem;
+  }
+  tr {
+    border-bottom: 1px solid #00000010;
+  }
+  thead {
+    border-bottom: 4px solid #00000020;
+  }
 }
 
 .html-text {
