--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -28,6 +28,14 @@
       <div
         class="pt-tab"
         role="tab"
+        aria-selected="{% if page.key == 'rules' %}true{% else %}false{% endif %}"
+      >
+        <span class="pt-icon-standard pt-icon-book sidebar-icon"></span>
+        <a href="/rules.html">Competition Rules</a>
+      </div>
+      <div
+        class="pt-tab"
+        role="tab"
         aria-selected="{% if page.key == 'onsite' %}true{% else %}false{% endif %}"
       >
         <span class="pt-icon-standard pt-icon-flag sidebar-icon"></span>
@@ -36,10 +44,10 @@
       <div
         class="pt-tab"
         role="tab"
-        aria-selected="{% if page.key == 'rules' %}true{% else %}false{% endif %}"
+        aria-selected="{% if page.key == 'regulation' %}true{% else %}false{% endif %}"
       >
         <span class="pt-icon-standard pt-icon-book sidebar-icon"></span>
-        <a href="/rules.html">Rules</a>
+        <a href="/regulation.html">Regulation</a>
       </div>
       <div
         class="pt-tab"
