Address prabowo02@'s second round of comments

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -30,7 +30,7 @@
         role="tab"
         aria-selected="{% if page.key == 'rules' %}true{% else %}false{% endif %}"
       >
-        <span class="pt-icon-standard pt-icon-book sidebar-icon"></span>
+        <span class="pt-icon-standard pt-icon-take-action sidebar-icon"></span>
         <a href="/rules.html">Competition Rules</a>
       </div>
       <div
