--- a/_includes/header.html
+++ b/_includes/header.html
@@ -9,6 +9,7 @@
       <div class="header__subtitle">Indonesia, 15 - 16 August 2020</div>
     </div>
     <div class="pt-navbar-group pt-align-right">
+      <img src="assets/images/kemendikbud-logo.png" class="header__logo" />
       <img src="assets/images/toki-logo.png" class="header__logo" />
     </div>
   </div>
