--- a/_includes/menubar.html
+++ b/_includes/menubar.html
@@ -2,8 +2,17 @@
   <div class="menubar__content">
     <div class="pt-tabs">
       <ul class="pt-tab-list" role="tablist">
-        <li class="pt-tab" role="tab" aria-selected="true">
+        <li class="pt-tab" role="tab">
           <a href="/">Home</a>
+        </li>
+        <li class="pt-tab" role="tab">
+          <a href="/opening.html">Opening Ceremony</a>
+        </li>
+        <li class="pt-tab" role="tab">
+          <a href="/closing.html">Closing Ceremony</a>
+        </li>
+        <li class="pt-tab" role="tab">
+          <a href="/results.html">Results</a>
         </li>
       </ul>
     </div>
