Add result table, and hide sidebar for opening, closing, and results page

--- a/_layouts/content-without-sidebar.html
+++ b/_layouts/content-without-sidebar.html
@@ -2,8 +2,8 @@
 layout: default
 ---
 
-<div class="content-with-sidebar">
-  <div class="content-with-sidebar__content">
+<div class="content-without-sidebar">
+  <div class="content-without-sidebar__content">
     {{ content }}
   </div>
 </div>
