--- a/_includes/menubar.html
+++ b/_includes/menubar.html
@@ -5,7 +5,7 @@
         <li
           class="pt-tab"
           role="tab"
-          aria-selected="{% if page.key != 'results' and page.key != 'opening' and page.key != 'closing' %}true{% else %}false{% endif %}"
+          aria-selected="{% if page.key != 'open-results' and page.key != 'results' and page.key != 'opening' and page.key != 'closing' %}true{% else %}false{% endif %}"
         >
           <a href="/">Home</a>
         </li>
