--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,14 +1,14 @@
-<nav class="pt-navbar header">
+<nav class="bp3-navbar header">
   <div class="header__wrapper">
-    <div class="pt-navbar-group pt-align-left">
+    <div class="bp3-navbar-group bp3-align-left">
       <img src="assets/images/apio-logo.png" class="header__logo" />
-      <div class="pt-navbar-heading header__title">
+      <div class="bp3-navbar-heading header__title">
         Asia-Pacific Informatics Olympiad 2020
       </div>
-      <span class="pt-navbar-divider" />
+      <span class="bp3-navbar-divider" />
       <div class="header__subtitle">Indonesia, 15 - 16 August 2020</div>
     </div>
-    <div class="pt-navbar-group pt-align-right">
+    <div class="bp3-navbar-group bp3-align-right">
       <img src="assets/images/kemendikbud-logo.png" class="header__logo" />
       <img src="assets/images/toki-logo.png" class="header__logo" />
     </div>
