--- a/_includes/menubar.html
+++ b/_includes/menubar.html
@@ -1,37 +1,37 @@
 <div class="menubar">
   <div class="menubar__content">
-    <div class="pt-tabs">
-      <ul class="pt-tab-list" role="tablist">
+    <div class="bp3-tabs">
+      <ul class="bp3-tab-list" role="tablist">
         <li
-          class="pt-tab"
+          class="bp3-tab"
           role="tab"
           aria-selected="{% if page.key != 'open-results' and page.key != 'results' and page.key != 'opening' and page.key != 'closing' %}true{% else %}false{% endif %}"
         >
           <a href="/">Home</a>
         </li>
         <li
-          class="pt-tab"
+          class="bp3-tab"
           role="tab"
           aria-selected="{% if page.key == 'opening' %}true{% else %}false{% endif %}"
         >
           <a href="/opening">Opening Ceremony</a>
         </li>
         <li
-          class="pt-tab"
+          class="bp3-tab"
           role="tab"
           aria-selected="{% if page.key == 'closing' %}true{% else %}false{% endif %}"
         >
           <a href="/closing">Closing Ceremony</a>
         </li>
         <li
-          class="pt-tab"
+          class="bp3-tab"
           role="tab"
           aria-selected="{% if page.key == 'results' %}true{% else %}false{% endif %}"
         >
           <a href="/results">Official Results</a>
         </li>
         <li
-          class="pt-tab"
+          class="bp3-tab"
           role="tab"
           aria-selected="{% if page.key == 'open-results' %}true{% else %}false{% endif %}"
         >
