--- a/_sass/_sidebar.scss
+++ b/_sass/_sidebar.scss
@@ -1,4 +1,4 @@
-@import 'colors';
+@import "colors";
 
 .card-sidebar {
   padding-top: 0;
@@ -17,13 +17,13 @@
     padding-bottom: 0;
   }
 
-  .pt-tab-list {
+  .bp3-tab-list {
     display: block;
     left: -20px;
     width: 270px;
   }
 
-  .pt-tab {
+  .bp3-tab {
     margin-right: 0 !important;
     padding-left: 20px !important;
     line-height: 50px;
@@ -35,7 +35,7 @@
     }
   }
 
-  .pt-tab[aria-selected="true"] {
+  .bp3-tab[aria-selected="true"] {
     background-color: #eef2fb !important;
     border-radius: 0 !important;
     border-left: 3px solid $primary-color;
@@ -45,7 +45,7 @@
     color: $text-color;
   }
 
-  .pt-tab[aria-selected="false"] {
+  .bp3-tab[aria-selected="false"] {
     color: $primary-color;
   }
 
@@ -79,7 +79,7 @@
     top: -15px;
     height: 30px;
 
-    .pt-tab-list {
+    .bp3-tab-list {
       left: 0;
     }
   }
@@ -88,7 +88,7 @@
     line-height: 50px;
   }
 
-  .pt-overlay-content {
+  .bp3-overlay-content {
     top: -10px !important;
   }
 }
