--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,100 +1,100 @@
-<div class="pt-card card-sidebar">
-  <div class="pt-tabs pt-tab-vertical">
-    <div class="pt-tab-list" role="tablist">
+<div class="bp3-card card-sidebar">
+  <div class="bp3-tabs bp3-tab-vertical">
+    <div class="bp3-tab-list" role="tablist">
       <div
-        class="pt-tab"
+        class="bp3-tab"
         role="tab"
         aria-selected="{% if page.key == 'news' %}true{% else %}false{% endif %}"
       >
-        <span class="pt-icon-standard pt-icon-feed sidebar-icon"></span>
+        <span class="bp3-icon-standard bp3-icon-feed sidebar-icon"></span>
         <a href="/">News</a>
       </div>
       <div
-        class="pt-tab"
+        class="bp3-tab"
         role="tab"
         aria-selected="{% if page.key == 'about' %}true{% else %}false{% endif %}"
       >
-        <span class="pt-icon-standard pt-icon-star sidebar-icon"></span>
+        <span class="bp3-icon-standard bp3-icon-star sidebar-icon"></span>
         <a href="/about.html">About</a>
       </div>
       <div
-        class="pt-tab"
+        class="bp3-tab"
         role="tab"
         aria-selected="{% if page.key == 'tasks' %}true{% else %}false{% endif %}"
       >
-        <span class="pt-icon-standard pt-icon-menu sidebar-icon"></span>
+        <span class="bp3-icon-standard bp3-icon-menu sidebar-icon"></span>
         <a href="/tasks.html">Competition Tasks</a>
       </div>
       <div
-        class="pt-tab"
+        class="bp3-tab"
         role="tab"
         aria-selected="{% if page.key == 'call-for-tasks' %}true{% else %}false{% endif %}"
       >
-        <span class="pt-icon-standard pt-icon-book sidebar-icon"></span>
+        <span class="bp3-icon-standard bp3-icon-book sidebar-icon"></span>
         <a href="/call-for-tasks.html">Call for Tasks</a>
       </div>
       <div
-        class="pt-tab"
+        class="bp3-tab"
         role="tab"
         aria-selected="{% if page.key == 'rules' %}true{% else %}false{% endif %}"
       >
-        <span class="pt-icon-standard pt-icon-take-action sidebar-icon"></span>
+        <span class="bp3-icon-standard bp3-icon-take-action sidebar-icon"></span>
         <a href="/rules.html">Competition Rules</a>
       </div>
       <div
-        class="pt-tab"
+        class="bp3-tab"
         role="tab"
         aria-selected="{% if page.key == 'regulation' %}true{% else %}false{% endif %}"
       >
-        <span class="pt-icon-standard pt-icon-book sidebar-icon"></span>
+        <span class="bp3-icon-standard bp3-icon-book sidebar-icon"></span>
         <a href="/regulation.html">Regulation</a>
       </div>
       <div
-        class="pt-tab"
+        class="bp3-tab"
         role="tab"
         aria-selected="{% if page.key == 'spec' %}true{% else %}false{% endif %}"
       >
-        <span class="pt-icon-standard pt-icon-application sidebar-icon"></span>
+        <span class="bp3-icon-standard bp3-icon-application sidebar-icon"></span>
         <a href="/spec.html">Technical Specification</a>
       </div>
       <div
-        class="pt-tab"
+        class="bp3-tab"
         role="tab"
         aria-selected="{% if page.key == 'registration' %}true{% else %}false{% endif %}"
       >
-        <span class="pt-icon-standard pt-icon-people sidebar-icon"></span>
+        <span class="bp3-icon-standard bp3-icon-people sidebar-icon"></span>
         <a href="/registration.html">Registration</a>
       </div>
       <div
-        class="pt-tab"
+        class="bp3-tab"
         role="tab"
         aria-selected="{% if page.key == 'schedule' %}true{% else %}false{% endif %}"
       >
-        <span class="pt-icon-standard pt-icon-calendar sidebar-icon"></span>
+        <span class="bp3-icon-standard bp3-icon-calendar sidebar-icon"></span>
         <a href="/schedule.html">Schedule</a>
       </div>
       <div
-        class="pt-tab"
+        class="bp3-tab"
         role="tab"
         aria-selected="{% if page.key == 'open' %}true{% else %}false{% endif %}"
       >
-        <span class="pt-icon-standard pt-icon-duplicate sidebar-icon"></span>
+        <span class="bp3-icon-standard bp3-icon-duplicate sidebar-icon"></span>
         <a href="/open.html">Open Contest</a>
       </div>
       <div
-        class="pt-tab"
+        class="bp3-tab"
         role="tab"
         aria-selected="{% if page.key == 'links' %}true{% else %}false{% endif %}"
       >
-        <span class="pt-icon-standard pt-icon-link sidebar-icon"></span>
+        <span class="bp3-icon-standard bp3-icon-link sidebar-icon"></span>
         <a href="/links.html">Links</a>
       </div>
       <div
-        class="pt-tab"
+        class="bp3-tab"
         role="tab"
         aria-selected="{% if page.key == 'contact' %}true{% else %}false{% endif %}"
       >
-        <span class="pt-icon-standard pt-icon-envelope sidebar-icon"></span>
+        <span class="bp3-icon-standard bp3-icon-envelope sidebar-icon"></span>
         <a href="/contact.html">Contact us</a>
       </div>
     </div>
