--- a/_layouts/single-page-md.html
+++ b/_layouts/single-page-md.html
@@ -4,6 +4,6 @@ layout: content-with-sidebar
 
 <h2>{{ page.title }}</h2>
 
-<div class="pt-card card-sidebar content-card html-text" markdown="1">
+<div class="bp3-card card-sidebar content-card html-text" markdown="1">
   {{ page.content | markdownify }}
 </div>
