--- a/_layouts/single-page.html
+++ b/_layouts/single-page.html
@@ -4,6 +4,6 @@ layout: content-with-sidebar
 
 <h2>{{ page.title }}</h2>
 
-<div class="pt-card card-sidebar content-card html-text">
+<div class="bp3-card card-sidebar content-card html-text">
   {{ page.content }}
 </div>
