--- a/_sass/_header.scss
+++ b/_sass/_header.scss
@@ -1,11 +1,12 @@
-@import 'colors';
+@import "colors";
 
 .header {
   background-color: $primary-color !important;
   height: 60px;
 }
 
-.header, .header a {
+.header,
+.header a {
   color: white;
 }
 
@@ -28,10 +29,12 @@
   margin-left: 10px;
   margin-right: 0;
   font-size: 23px;
+  width: 450px;
 }
 
 .header__subtitle {
   font-size: 16px;
   line-height: 24px;
   margin-left: 15px;
+  width: 250px;
 }
