--- a/_sass/_menubar.scss
+++ b/_sass/_menubar.scss
@@ -1,4 +1,4 @@
-@import 'colors';
+@import "colors";
 
 .menubar {
   width: 100%;
@@ -18,7 +18,7 @@
     outline: none;
   }
 
-  .pt-tab {
+  .bp3-tab {
     padding-left: 20px;
     padding-right: 20px;
     margin-right: 0;
@@ -27,19 +27,19 @@
     color: $primary-color;
   }
 
-  .pt-tab[aria-selected="true"] {
+  .bp3-tab[aria-selected="true"] {
     font-weight: 600;
     background-color: #fbfbfb;
     color: $text-color;
     box-shadow: inset 0 -3px 0 $primary-color;
   }
 
-  .pt-tab-indicator-wrapper {
+  .bp3-tab-indicator-wrapper {
     height: 45px !important;
     z-index: 1;
   }
 
-  .pt-tab-indicator {
+  .bp3-tab-indicator {
     background-color: $primary-color;
   }
 }
